<resources>
    <string name="app_name">Find My Phone by Clapping</string>
    <string name="find_my_phone">Find My Phone by Clapping</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="on_going_1st_top_label">Lost Your Phone?</string>
    <string name="on_going_1st_bottom_label">"Don’t worry! We have an easy solution for you."</string>
    <string name="on_going_2nd_top_label">Activate Clap Alarm</string>
    <string name="on_going_2nd_bottom_label">"Clap your hands, and find your phone within seconds!"</string>
    <string name="on_going_3rd_top_label">Ringtone &amp; Flashlight</string>
    <string name="on_going_3rd_bottom_label">"Use ringtone and flashlight to find lost phone"</string>
    <string name="on_going_4th_top_label">Easy to Use</string>
    <string name="on_going_4th_bottom_label">"Activate in one tap and find your phone effortlessly!"</string>


    <string name="smart_parental_controls_give">Smart parental controls give\n</string>
    <string name="you_peace_of_mind">you peace of mind</string>
    <string name="get_device_from_child">Get Device From Child\n</string>
    <string name="without_fight">Without Fight</string>
    <string name="set_timer_select_allowed">Set timer, Select allowed\n</string>
    <string name="apps_get_phone_back">apps, Get Phone Back</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="child_app_lock">Child App Lock</string>
    <string name="custom_lock">Custom Lock</string>
    <string name="instant_lock">Instant Lock</string>
    <string name="unknown_calling">Unknown Calling</string>
    <string name="unknown_calling_number">+92 303 6677888</string>
    <string name="activate_now">Activate Now</string>
    <string name="swipe_to_unlock">Swipe To Unlock</string>
    <string name="instant_lock_activated">Instant Lock Activated</string>
    <string name="custom_lock_activated">Custom Lock Activated</string>
    <string name="apply_lock_on_custom_apps">Apply Custom Lock</string>
    <string name="please_select_a_lock_option">Please select a lock option</string>
    <string name="limited_screen_time">Limited screen time</string>
    <string name="choose_which_app_are_allowed">Choose which app are allowed</string>
    <string name="choose_lock_screen">Choose lock screen</string>
    <string name="change_unlock_button_position">Change unlock button position</string>
    <string name="multiple_unlock_method">Multiple unlock method</string>
    <string name="settings">Settings</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_launcher">No Launcher</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_activate">TAP TO ACTIVATE</string>
    <string name="tap_to_deactivate">TAP TO DEACTIVATE</string>
    <string name="ringtone_volume">Ringtone Volume</string>
    <string name="_80">80%</string>
    <string name="flashlight_alert">Flashlight Alert</string>
    <string name="select_from_your_phone">Select from your phone</string>
    <string name="ringtone_s">Ringtone’s</string>
    <string name="view_more">View more</string>
    <string name="air_horn">Air Horn</string>


    <string name="permissionenabled">This Application will never use take any personal information but we need following permissions to run application perfectly. Thanks</string>
    <string name="privacy_policy_tv"><u>Privacy Policy</u></string>
    <string name="android_apps">Android Apps</string>
    <string name="permission_message">Please we required permission to run application</string>
    <string name="terms_of_use_cap">Terms Of Use</string>
    <string name="whistle_detection">Service is running to detect Clap</string>


    <string name="exit">Exit</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="exit_dialog">EXIT </string>
    <string name="EXITorNO">Are you sure you want to exit?</string>
    <string name="app_permissions">App Permission</string>
    <string name="accept">Accept</string>
    <string name="camera_access">Camera Access</string>
    <string name="microphone_access">Microphone access</string>
    <string name="overlay_permissions">Overlay permissions</string>
    <string name="audio_recording_permission">Audio recording permission</string>
    <string name="notification_permission">Notification permission</string>
    <string name="setting">Setting</string>
    <string name="sound_sensitivity">Sound Sensitivity</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="flash_light_alert">Flash Light Alert</string>
    <string name="too_short">Too Short</string>
    <string name="short_">Short</string>
    <string name="long_">Long</string>
    <string name="too_long">Too Long</string>
    <string name="start">Start</string>
    <string name="_12_00">12:00</string>
    <string name="end">End</string>
    <string name="schedule_deactivation">Schedule Deactivation</string>
    <string name="share_app">Share the App</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="how_to_use">How to use?</string>
    <string name="we_try_our_best">We try our best to improve user experience. Please Rate our app and appreciate us.</string>
    <string name="enable_your_phone_to_listen">Enable your phone to listen for a specific number of claps (e.g., 3 quick claps) and respond by ringing loudly, vibrating, or flashing the flashlight—even if it\'s on silent mode.</string>
    <string name="test_it_out_clap_your_hands">Test It Out – Clap your hands, and your phone should ring or flash immediately!</string>
    <string name="step_5">Step 5</string>
    <string name="tap_start_the_app_will_now_listen_for_your_clap_pattern_in_the_background">Tap Start – The app will now listen for your clap pattern in the background.</string>
    <string name="step_4">Step 4</string>
    <string name="choose_alert_type_pick_sound_vibration_flashlight_or_all">Choose Alert Type – Pick sound, vibration, flashlight, or all.</string>
    <string name="step_3">Step 3</string>
    <string name="double_clap_and_trigger_the_phone">Double clap and trigger the phone.</string>
    <string name="step_2">Step 2</string>
    <string name="tap_on_the_activate_button_to_enable_the_feature">Tap on the Activate button to enable the "Clap to Find" feature.</string>
    <string name="step_1">Step 1</string>
    <string name="volume_level">%1$s %%</string>
    <string name="start_time">%1$d : %2$d</string>
    <string name="end_time">%1$d : %2$d</string>
    <string name="feature_is_activated">Feature is Activated</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="feature_is_deactivated">Feature is Deactivated</string>
    <string name="sound_alert">Sound Alert</string>
    <string name="privacy_policy_link">https://sites.google.com/d/1L24L7T70p9Hz194qD15Im2JkJqvt3LyH/p/19M1Exb8-zMHgz1l0EeNBkOLCF070qPqL/edit?pli=1</string>
</resources>