<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/permission_bg"
    tools:context=".presentation.fragments.permission.PermissionFindMyPhoneFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_app_permission"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_margin="@dimen/_25sdp"
        android:fontFamily="@font/hedvig_letters_sans"
        android:gravity="center|start"
        android:text="@string/app_permissions"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permission_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_volume_border"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_permission"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8">

        <View
            android:id="@+id/view_1"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/empty_circle_shape"
            app:layout_constraintBottom_toTopOf="@+id/view_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_2"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/empty_circle_shape"
            app:layout_constraintBottom_toTopOf="@+id/view_3"
            app:layout_constraintStart_toStartOf="@+id/view_1"
            app:layout_constraintTop_toBottomOf="@+id/view_1" />


        <View
            android:id="@+id/view_3"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/empty_circle_shape"
            app:layout_constraintBottom_toTopOf="@+id/view_4"
            app:layout_constraintStart_toStartOf="@+id/view_1"
            app:layout_constraintTop_toBottomOf="@+id/view_2" />

        <View
            android:id="@+id/view_4"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="@drawable/empty_circle_shape"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/view_5"
            app:layout_constraintStart_toStartOf="@+id/view_1"
            app:layout_constraintTop_toBottomOf="@+id/view_3" />

        <View
            android:id="@+id/view_5"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/empty_circle_shape"
            app:layout_constraintStart_toStartOf="@+id/view_1"
            app:layout_constraintTop_toBottomOf="@+id/view_4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_permission_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:fontFamily="@font/hedvig_letters_sans"
            android:gravity="center|start"
            android:text="@string/camera_access"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/view_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_1"
            app:layout_constraintTop_toTopOf="@+id/view_1" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_permission_microphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:fontFamily="@font/hedvig_letters_sans"
            android:gravity="center|start"
            android:text="@string/microphone_access"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/view_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_2"
            app:layout_constraintTop_toTopOf="@+id/view_2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_permission_overlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:fontFamily="@font/hedvig_letters_sans"
            android:gravity="center|start"
            android:text="@string/overlay_permissions"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/view_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_3"
            app:layout_constraintTop_toTopOf="@+id/view_3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_permission_audio_recording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:fontFamily="@font/hedvig_letters_sans"
            android:gravity="center|start"
            android:text="@string/audio_recording_permission"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/view_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_4"
            app:layout_constraintTop_toTopOf="@+id/view_4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_permission_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:fontFamily="@font/hedvig_letters_sans"
            android:gravity="center|start"
            android:text="@string/notification_permission"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/view_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_5"
            app:layout_constraintTop_toTopOf="@+id/view_5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tv_button"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_80sdp"
        android:background="@drawable/button_shape_permission"
        android:text="@string/accept"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>